--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm i && react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npm i && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
